--- a/client/main.css
+++ b/client/main.css
@@ -15,3 +15,9 @@ body {
     margin-left: 1%;
     margin-top: 15px;
 }
+
+.kobold-name {
+    display: inline-block;
+    margin: 10px;
+    padding: 5px;
+}
