--- a/client/main.css
+++ b/client/main.css
@@ -21,3 +21,9 @@ body {
     margin: 10px;
     padding: 5px;
 }
+
+.noticeboard {
+    border-style: solid;
+    display: inline-block;
+    padding: 10px;
+}
